--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* 폰트트시작 */
 @font-face {
     font-family: 'NanumSquareNeoLight';
     src: url(https://hangeul.pstatic.net/hangeul_static/webfont/NanumSquareNeo/NanumSquareNeoTTF-aLt.eot);
@@ -27,15 +28,18 @@
 
 
 body {
-    font-family: 'NanumSquareNeoVariable';
+    font-family: 'NanumSquareNeo';
 }
+/* 폰트 끝 */
 
+/* header 시작 */
 header {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     transition: 0.5s;
+    z-index: 1;
 }
 
 .sign_up_popup {
@@ -53,5 +57,81 @@ header {
 
 .header {
     display: flex;
-    
+    justify-content: space-between;
+    height: 100px;
+    align-items: center;
+    padding: 0 80px;
+}
+
+.menu {
+    display: flex;
+}
+
+.menu > li {
+    margin: 0 16px;
+}
+
+.menu > li > a {
+    font-size: 20px;
+    text-decoration: none;
+    color: #be201f;
+    font-weight: 900;
+}
+
+.menu > li > a::after {
+    content: '';
+    width: 100%;
+    height: 2px;
+    display: block; /*컨텐츠 요소가 비어있음*/
+    background: #be201f;
+    margin-top: 10px;
+    /* transition: 0.5s; */
+
+}
+
+.menu > li:hover a::after {
+    width: 100%;
+}
+
+.logo {
+    width: 550px;
+    text-align: center;
+}
+
+.header_icons {
+    display: flex;
+    width: 550px;
+    justify-content: flex-end;
+}
+
+.header_icons > li {
+    margin: 0 16px;
+}
+/* header 끝끝 */
+
+/* main_container */
+.main_container {
+    height: 100vh;
+}
+
+.main_background {
+    background-image: url(../img/main_img.png);
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    position: relative;
+}
+
+.main_texts {
+    position: absolute;
+    top: 300px;
+    left: 100px;
+    color: #fff;
+}
+
+.main_texts > h2 {
+    font-size: 50px;
+    font-weight: 600;
+    line-height: 65px;
+    margin-bottom: 50px;
 }
