--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,22 @@
 body {
     font-family: 'NanumSquareNeo';
 }
+
 /* 폰트 끝 */
+
+/* fixed_icons 시작 */
+.fixed_icons {
+    position: fixed;
+    bottom: 24px;
+    right: 24px;
+}
+
+
+.fixed_icons > a {
+    display: block;
+    margin: 8px 0;
+}
+/* fixed icons 끝 */
 
 /* header 시작 */
 header {
@@ -50,7 +65,7 @@ header {
 
 }
 
-.sign_up_popup > a {
+.sign_up_popup>a {
     color: #fff;
     text-decoration: none;
 }
@@ -67,29 +82,30 @@ header {
     display: flex;
 }
 
-.menu > li {
+.menu>li {
     margin: 0 16px;
 }
 
-.menu > li > a {
+.menu>li>a {
     font-size: 20px;
     text-decoration: none;
     color: #be201f;
     font-weight: 900;
 }
 
-.menu > li > a::after {
+.menu>li>a::after {
     content: '';
     width: 100%;
     height: 2px;
-    display: block; /*컨텐츠 요소가 비어있음*/
+    display: block;
+    /*컨텐츠 요소가 비어있음*/
     background: #be201f;
     margin-top: 10px;
     /* transition: 0.5s; */
 
 }
 
-.menu > li:hover a::after {
+.menu>li:hover a::after {
     width: 100%;
 }
 
@@ -104,12 +120,13 @@ header {
     justify-content: flex-end;
 }
 
-.header_icons > li {
+.header_icons>li {
     margin: 0 16px;
 }
+
 /* header 끝끝 */
 
-/* main_container */
+/* main_container 시작작*/
 .main_container {
     height: 100vh;
 }
@@ -129,9 +146,195 @@ header {
     color: #fff;
 }
 
-.main_texts > h2 {
+.main_texts>h2 {
     font-size: 50px;
     font-weight: 600;
     line-height: 65px;
     margin-bottom: 50px;
 }
+
+/* main container 끝 */
+
+/* shake type container 시작 */
+.shake_type_container {
+    margin-top: 100px;
+}
+
+.shake_plan {
+    display: flex;
+    justify-content: center;
+}
+
+.shake > a > img {
+    width: 550px;
+    margin: 0 24px;
+}
+
+.shake_texts {
+    margin: 16px 24px;
+    color: #be201f;
+}
+
+.shake_name {
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.shake_discount {
+    margin: 8px 0 16px 0;
+    font-size: 20px;
+}
+
+.shake_price {
+    color: #e0a8a8;
+    text-decoration: line-through;
+}
+
+.discount_rate {
+    border: 1px solid #be201f;
+    padding: 15px;
+    border-radius: 25px;
+    display: inline-block;
+}
+/* shake type container 끝 */
+
+
+/* ani_text_container 시작*/
+.ani_text_container {
+    /* width: 100%; */
+    margin: 100px 0;
+    overflow: hidden;
+}
+
+.animation_text {
+    color: #be201f;
+    font-size: 140px;
+    width: max-content;
+    animation:text_translate_ani 50s infinite linear;
+}
+
+.animation_text_container:hover .animation_text {
+    animation-duration: 150s;
+} 
+
+@keyframes text_translate_ani {
+    0% {
+        transform: translateX(0%);
+    }
+
+    100% {
+        transform: translateX(-50%);
+    }
+}
+/* ani_text_container 끝*/
+
+/* diet_technique_container 시작 */
+.diet_technique_container > ul {
+    display: flex;
+    justify-content: center;
+}
+
+.diet_technique_container > ul:first-child {
+    margin-bottom: 50px;
+}
+
+.diet_technique_container > ul > li > img {
+    width: 550px;
+    margin: 0 25px;
+
+}
+
+.diet_technique_text {
+    color: #be201f;
+    margin: 0 25px;
+    padding: 60px 40px;
+    width: 550px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.diet_technique_text > div > h2 {
+    font-size: 50px;
+    font-weight: 600;
+    margin-bottom: 24px;
+}
+
+.diet_technique_text > div > p {
+    font-size: 20px;
+}
+
+.btn {
+    width: fit-content;
+    background : none;
+    border: 1px solid #be201f;
+    padding: 14px 0;
+    border-radius: 50px;
+}
+
+.btn > a {
+    color: #be201f;
+    text-decoration: none;
+    padding: 16px 34px;
+    font-size: 20px;
+    border-radius: 50px;
+}
+/* diet_technique_container 끝 */
+
+/* identity_container  > identity_text 시작 */
+.identity_text {
+    display: flex;
+    justify-content: space-between;
+    padding: 150px 60px;
+    align-items: center;
+}
+
+.identity_text > h2 {
+    font-size: 110px;
+    color: #be201f;
+    line-height: 150px;
+}
+
+.identity_text > h2 > span {
+    border: 2px solid #be201f;
+    padding: 4px 60px 8px 60px;
+    border-radius: 150px;
+}
+
+.identity_text > figure {
+    animation: identity_ani 10s infinite;
+}
+
+@keyframes identity_ani {
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+
+/* identity_container > identity_text 끝 */
+
+/* identity_container  > identity_content 시작 */
+.identity_content {
+    background-image: url(../img/하단\ 이미지.png);
+    height: 738px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: #fff;
+    text-align: center;
+    gap: 34px;
+}
+
+.identity_content > h2 {
+    font-size: 60px;
+    font-weight: 600;
+}
+
+.identity_content > p {
+    font-size: 20px;
+    line-height: 24px;
+}
+
+
+/* identity_container  > identity_content 끝 */
